--- a/style/style.css
+++ b/style/style.css
@@ -121,3 +121,56 @@ footer{
     text-align: center;
     margin: 120px auto;
 }
+.vdo-part{
+    margin: 0 auto;
+    max-width: 1250px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.textt{
+    width: 50%;
+
+}
+.vdo{
+    /* width: 50%; */
+    width: 610px;
+    height: cover;
+    flex-shrink: 0;
+    border-radius: 16px;
+background: linear-gradient(180deg, #131318 -31.96%, rgba(19, 19, 24, 0.00) 100%);
+}
+.t1{
+    color: #131318;
+    font-size: 40px;
+    font-weight: 800;
+    line-height: 60px; /* 150% */
+}
+.t2{
+    width: 532px;
+    color: #5A5A5D;
+font-size: 16px;
+font-weight: 400;
+line-height: 26px; /* 162.5% */
+}
+.vdo-btn{
+    margin-top: 10px;
+    border-radius: 8px;
+    background: #FF5400;
+    width: 174px;
+    height: 52px;
+    border: none;
+    color: #FFF;
+text-align: center;
+font-size: 10px;
+font-weight: 800;
+line-height: normal;
+    flex-shrink: 0;
+}
+.t3{
+    color: #131318;
+    width: 518px;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 26px; /* 162.5% */
+}
