--- a/style/responsive.css
+++ b/style/responsive.css
@@ -1,2 +1,49 @@
+@media (max-width: 600px) {
+    .item-container {
+        display: none; 
+        gap: 500px;
+    }
+
+    .hamburger-menu {
+        font-size: 1.5em;
+        cursor: pointer;
+        display: block; 
+    }
+    
+}
+
+@media (max-width: 600px) {
+    .form {
+        flex-direction:column;
+        align-items: center;
+        width: 50%; 
+        background:none;
+        display: block;
+    }
+
+    .form input,
+    .form select {
+        margin-right: 10px; /* Add some margin between inputs for spacing */
+    }
+}
+@media (max-width: 600px) {
+    .imgg {
+        flex-direction: column; /* Change back to column layout for smaller screens */
+    }
+
+    .img-part {
+        width: 100%;
+         display: ;
+    }
+
+    .text-part {
+        width: 100%; /* Make the text take up the full width */
+        text-align: center; /* Center the text */
+        margin-top: 20px; /* Add some space between the image and text */
+    }
+}
+
+
+
 
 
